--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/http": "4.1.2",
     "@angular/platform-browser": "4.1.2",
     "@angular/platform-browser-dynamic": "4.1.2",
+    "@ionic-native/camera": "3.10.2",
     "@ionic-native/core": "3.10.2",
     "@ionic-native/splash-screen": "3.10.2",
     "@ionic-native/status-bar": "3.10.2",
@@ -28,13 +29,13 @@
     "ionicons": "3.0.0",
     "rxjs": "5.1.1",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.11",
-    "@ionic-native/camera": "3.10.2"
+    "zone.js": "0.8.11"
   },
   "devDependencies": {
     "@ionic/app-scripts": "1.3.7",
     "@ionic/cli-plugin-ionic-angular": "1.3.0",
-    "typescript": "2.3.3"
+    "typescript": "2.3.3",
+    "d3": "^4.9.1"
   },
   "description": "An Ionic project"
 }
